Update Pre_processing and variant exploration.ipynb
A small typos

--- a/Pre_processing and variant exploration.ipynb
+++ b/Pre_processing and variant exploration.ipynb
@@ -148,7 +148,7 @@
     "clean_text = []\n",
     "\n",
     "for i in range(0,row):\n",
-    "    processed_input = clean(fixed_trin_text.iloc[i][0])\n",
+    "    processed_input = clean(fixed_train_text.iloc[i][0])\n",
     "    output_str      = \" . \".join(processed_input)\n",
     "    clean_text.append(output_str)\n",
     "\n",
